# keys-ai-bot-friday

./: .env.sample  .markdownlint.json  CHANGELOG.md  LICENSE  README.md  cspell.json  cspell_dictionary.txt  pyproject.toml
docs/: google_genai_dev_handbook.md
friday/: main.py
friday/assets/: system_message.yaml
friday/configs/: ui_configs.ini
friday/sdk/: __init__.py  generation.py  model.py
friday/ui/: __init__.py  main.py
friday/utilities/: exceptions.py  logger.py
tests/friday_sdks/: test_generation.py
